# P10_RAG_SportSee

./: MistralChat.py  Notes.md  README.md  Rapport.md  pyproject.toml  requirements.txt
Ragas_eval/: evaluate_ragas.py  rag_dataset.json  test_routing_ragas.py
Ragas_eval/1st_evaluation_results/: category_stats_20251209_231241.csv  evaluation_results_20251209_231241.csv  evaluation_summary_20251209_231241.json
Ragas_eval/evaluation_results/: category_stats_20251218_213328.csv  evaluation_results_20251218_213328.csv  evaluation_summary_20251218_213328.json  hybrid_category_stats_20251219_002201.csv  hybrid_evaluation_results_20251219_002201.csv  hybrid_evaluation_summary_20251219_002201.json  hybrid_strategy_stats_20251219_002201.csv
Ragas_eval/router_analysis/: router_analysis_20251219_014926.csv  router_stats_20251219_014926.json
inputs/: dictionnaire_enrichi.csv
scripts/: load_excel_to_db.py  router.py  sql_tool.py  test_router.py
utils/: config.py
vector_db/: document_chunks.pkl  faiss_index.idx
