[project]
name = "P10_DSML"
version = "0.1.0"
description = "Evaluation de performance d'un projet LLM"
authors = [
    {name = "RomaneFatima-Zahra",email = "barhoufz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (==1.44.1)",
    "mistralai (==0.4.2)",
    "langchain (==0.3.23)",
    "faiss-cpu (==1.10.0)",
    "pypdf2 (==3.0.1)",
    "python-docx (==1.1.2)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (==1.1.0)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit-feedback (>=0.1.4,<0.2.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "pillow (>=10.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
"scikit-image (>=0.21.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"